# auria-execution

./: Cargo.toml  README.md
src/: lib.rs
tests/: inference_pipeline.rs
